--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,10 @@
 
   <build>
     <plugins>
-      <plugin>
-        <artifactId>maven-site-plugin</artifactId>
+    <plugin>
+      <!-- Build an executable JAR -->
+        <groupId>org.apache.maven.plugins</groupId>
+       <artifactId>maven-site-plugin</artifactId>
         <configuration>
           <locales>en,fr</locales>
         </configuration>
